IFS-2920 Front end - project location

--- a/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/detail.html
+++ b/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/detail.html
@@ -27,7 +27,7 @@
         <thead>
             <tr>
                 <th scope="col" class="larger-cols">Question</th>
-                <th scope="col" class="larger-cols">Answer</th>
+                <th scope="col">Answer</th>
                 <th scope="col" class="smaller-col">Complete</th>
             </tr>
         </thead>
@@ -85,8 +85,8 @@
             <thead>
                 <tr>
                     <th scope="col" class="larger-cols">Partner</th>
-                    <th scope="col" class="larger-cols">Finance contact</th>
-                    <th scope="col" class="smaller-col">Project location</th>
+                    <th scope="col">Finance contact</th>
+                    <th scope="col">Project location</th>
                 </tr>
             </thead>
             <tbody>
