--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-interview-invite.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-interview-invite.html
@@ -18,7 +18,7 @@
 
     <th:block th:insert="fragments/layout :: page-title" th:with="pageTitle='Invitation to interview panel',subTitle=|${model.competitionName}|,size='heading-xlarge'" />
 
-    <p>You have been invited to the interview panel for <strong th:text="|${model.competitionName}|">'Technology inspired'</strong> on <strong th:text="|${#temporals.format(model.interviewDate, 'd MMMM yyyy')}|">21 March 2017</strong>.</p>
+    <p>You have been invited to the interview panel for <strong th:text="|${model.competitionName}|">'Technology inspired'</strong>.</p>
 
     <p>Innovate UK is to invest up to £9 million in Technology inspired.</p>
 
