--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview-find.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview-find.html
@@ -62,7 +62,7 @@
             <a th:href="@{/assessment/interview/competition/{competitionId}/assessors/invite(competitionId=${model.competitionId})}">Invite</a>
         </li>
         <li class="not-selected">
-            <a th:href="@{/assessment/interview/competition/{competitionId}/assessors/overview(competitionId=${model.competitionId})}">Pending and rejected</a>
+            <a th:href="@{/assessment/interview/competition/{competitionId}/assessors/pending-and-declined(competitionId=${model.competitionId})}">Pending and declined</a>
         </li>
         <li class="not-selected" aria-label="Item not selected">
             <a class="buttonlink disabled">Accepted</a>
