--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/resend-invites.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/resend-invites.html
@@ -46,7 +46,7 @@
 
                 <div class="extra-margin">
                     <button type="submit" class="button">Send invite</button>
-                    <a th:href="@{/competition/{competitionId}/assessors/overview(competitionId=${model.competitionId})}"
+                    <a th:href="@{/competition/{competitionId}/assessors/pending-and-declined(competitionId=${model.competitionId})}"
                        class="button button-clear">Cancel</a>
                 </div>
 
