--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/competition-setup-section-assessors.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/competition-setup-section-assessors.html
@@ -12,6 +12,7 @@
           th:attr="data-competition=${model.general.competition.id},data-autosave=${!model.general.state.setupComplete}?compSetup" data-section="assessors">
         <th:block th:if="${model.general.editable}" id="section-assessors-edit">
             <div class="form-group" th:classappend="${#fields.hasErrors('assessorCount')} ? 'form-group-error'">
+                <fieldset>
                     <legend class="heading-small">
                         How many assessors are required for each application?
                         <th:block th:if="${#fields.hasErrors('assessorCount')}">
@@ -27,6 +28,7 @@
                             <th:block th:text="${assessorOption.optionName}" />
                         </label>
                     </div>
+                </fieldset>
             </div>
             <div class="form-group" th:classappend="${#fields.hasErrors('assessorPay')} ? 'form-group-error'">
                 <label class="form-label" for="assessorPay">
