--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/panel-overview.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/panel-overview.html
@@ -62,7 +62,7 @@
                     <a th:href="@{/assessment/panel/competition/{competitionId}/assessors/invite(competitionId=${model.competitionId})}">Invite</a>
                 </li>
                 <li class="selected">
-                    <a th:href="@{/assessment/panel/competition/{competitionId}/assessors/overview(competitionId=${model.competitionId})}">Pending and declined</a>
+                    <a th:href="@{/assessment/panel/competition/{competitionId}/assessors/pending-and-declined(competitionId=${model.competitionId})}">Pending and declined</a>
                 </li>
                 <li class="not-selected">
                     <a th:href="@{/assessment/panel/competition/{competitionId}/assessors/accepted(competitionId=${model.competitionId})}">Accepted</a>
@@ -71,7 +71,7 @@
 
             <div class="grid-row">
                 <div class="column-three-quarters">
-                    <h2 class="heading-small no-margin-top">View assessors who have not yet responded or have been rejected.</h2>
+                    <h2 class="heading-small no-margin-top">View assessors who have not yet responded or have declined the invite.</h2>
                 </div>
             </div>
 
