--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/inform-ineligible.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/inform-ineligible.html
@@ -31,9 +31,14 @@
 
     <p class="heading-medium" th:text="|Recipient: ${model.leadApplicant}|">Dave smith</p>
 
-    <form th:action="@{/competition/application/{applicationId}/ineligible/send(applicationId=${model.applicationId})}" method="post" enctype="multipart/form-data" th:object="${form}">
-        <div class="form-group">
-            <label class="form-label-bold" for="subject">Subject</label>
+    <form th:action="@{/competition/application/{applicationId}/ineligible/send(applicationId=${model.applicationId})}" novalidate="novalidate" method="post" enctype="multipart/form-data" th:object="${form}">
+        <div class="form-group" th:classappend="${#fields.hasErrors('*{subject}')} ? 'form-group-error'">
+            <label class="form-label" th:for="${#ids.next('subject')}">
+                <span>Subject</span>
+                <th:block th:if="${#fields.hasErrors('subject')}">
+                    <span class="error-message" th:each="err : ${#fields.errors('subject')}" th:text="${err}"></span>
+                </th:block>
+            </label>
             <input class="form-control width-full"
                    id="subject"
                    type="text"
@@ -42,12 +47,17 @@
                    th:attr="data-required-errormessage=#{validation.informleadapplicant.subject.required}"   />
         </div>
 
-        <div class="form-group">
-            <label class="form-label-bold" for="message">Message</label>
+        <div class="form-group" th:classappend="${#fields.hasErrors('*{message}')} ? 'form-group-error'">
+            <label class="form-label" th:for="${#ids.next('message')}">
+                <span>Message</span>
+                <th:block th:if="${#fields.hasErrors('message')}">
+                    <span class="error-message" th:each="err : ${#fields.errors('message')}" th:text="${err}"></span>
+                </th:block>
+            </label>
             <textarea id="message"
                       rows="16"
                       class="form-control width-full"
-                      th:field="*{content}"
+                      th:field="*{message}"
                       required="required"
                       th:attr="data-required-errormessage=#{validation.informleadapplicant.message.required}"></textarea>
         </div>
