IFS-3094: Application details- startDate read only template updated to show a space when not filled

--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/question-type/types.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/question-type/types.html
@@ -328,7 +328,7 @@
                             <dt>Competition name</dt>
                             <dd th:text="${competition.name}"></dd>
                             <dt>When do you wish to start your project?</dt>
-                            <dd th:if="${model.application.startDate}" th:text="${#temporals.format(model.application.startDate, 'd MMMM yyyy')}"></dd>
+                            <dd th:text="${model.application.startDate} ? ${#temporals.format(model.application.startDate, 'd MMMM yyyy')} : ''"></dd>
                             <dt>Duration in months</dt>
                             <dd><th:block th:text="${model.application.durationInMonths}"/> months</dd>
                             <dt>Research category</dt>
