--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/question-type/types.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/question-type/types.html
@@ -206,11 +206,10 @@
                        th:field="*{__application.durationInMonths__}"
                        th:errorclass="form-control-error"
                        type="number"
-                       th:min="${competition.minProjectDuration}"
-                       th:max="${competition.maxProjectDuration}"
                        required="required"
-                       th:attr="data-min-errormessage=#{validation.project.duration.input.invalid(${competition.minProjectDuration}, ${competition.maxProjectDuration})},
-                                data-max-errormessage=#{validation.project.duration.input.invalid(${competition.minProjectDuration}, ${competition.maxProjectDuration})}"/>
+                       th:attr="data-range-min=${competition.minProjectDuration},
+                                data-range-max=${competition.maxProjectDuration},
+                                data-range-errormessage=#{validation.project.duration.input.invalid(${competition.minProjectDuration}, ${competition.maxProjectDuration})}" />
                 <!--/* this is solved with a pattern because setting a number and min="" and max="" doesn't support one message (your project should last between 1 and 36 months).
                 This could be fixed by doing a total refactor of javascript or set two different messages (Your project should be more than 1, less than 36), or like this with a regex */-->
             </div>
