--- a/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/financecheck/new-query.html
+++ b/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/financecheck/new-query.html
@@ -33,7 +33,7 @@
 
     <form class="extra-margin" th:action="@{{baseUrl}(baseUrl=${baseUrl},query_section=${model.querySection})}"
           th:object="${form}" method="post" enctype="multipart/form-data" data-single-submit="" novalidate="novalidate">
-            <h2 class="heading-medium">Post new query</h2>
+            <h2 class="heading-medium">Post a new query</h2>
             <div class="form-group" th:classappend="${#fields.hasErrors('queryTitle')}? 'form-group-error'">
                 <label for="queryTitle">
                     <span class="form-label-bold">Title</span>
