--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/question-type/types.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/question-type/types.html
@@ -328,11 +328,13 @@
                             <dt>Competition name</dt>
                             <dd th:text="${competition.name}"></dd>
                             <dt>When do you wish to start your project?</dt>
-                            <dd th:text="${model.application.startDate} ? ${#temporals.format(model.application.startDate, 'd MMMM yyyy')} : ''"></dd>
+                            <dd th:if="${model.application.startDate}" th:text="${#temporals.format(model.application.startDate, 'd MMMM yyyy')}"></dd>
+                                <dd th:unless="${model.application.startDate}"><span class="invisible">Not specified</span></dd>
                             <dt>Duration in months</dt>
                             <dd><th:block th:text="${model.application.durationInMonths}"/> months</dd>
                             <dt>Research category</dt>
                             <dd th:text="${model.application.researchCategory.name}"></dd>
+                                <dd th:unless="${model.application.researchCategory.name}"><span class="invisible">Not specified</span></dd>
                             <dt>Innovation area</dt>
                             <dd th:text="${model.application.innovationArea.name} ?: 'Not listed'"></dd>
                             <th:block th:unless="${model.application.resubmission == null}">
