IFS-2945 - Update to modal.

--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/fragments/modals.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/fragments/modals.html
@@ -577,7 +577,7 @@
     </div>
 </th:block>
 
-<!-- Withdraw a project -->
+<!-- Confirmation of withdrawing a project -->
 <th:block th:fragment="modal-withdraw-project">
     <div class="modal-withdraw-project" role="dialog" aria-hidden="true">
         <th:block th:insert="fragments/modals :: close-button" />
@@ -585,7 +585,7 @@
         <p>Are you sure you want to withdraw the project 'xxx' from the competition 'xxx'</p>
         <hr />
         <div>
-            <button class="button" name="approved" value="true">Accept documents</button>
+            <button class="button" name="approved" value="true">Withdraw project</button>
             <button type="button" class="js-close buttonlink">Cancel</button>
         </div>
     </div>
