--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2254-feedback-overview.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2254-feedback-overview.html
@@ -64,8 +64,11 @@
 
     <th:block th:if="${param.status != null and param.status[0] == 'noResponse'}">
         <div class="message-alert">
-            <h2 class="heading-small">The lead applicant has not responded to feedback.</h2>
+            <p>The lead applicant has not responded to feedback.</p>
         </div>
+
+        <h2 class="heading-medium">Attachments</h2>
+        <p>The lead applicant has not yet uploaded a response.</p>
     </th:block>
 
     <th:block th:if="${param.status == null}">
@@ -75,11 +78,6 @@
         <div class="form-group download">
             <h3 class="heading-small no-margin">Applicant feedback repsonse</h3>
             <a target="_blank" href="#">feedback-document.pdf, 8 KB (opens in a new window)</a>
-        </div>
-
-        <div class="form-group download">
-            <h3 class="heading-small no-margin">Innovation Lead feedback</h3>
-            <a target="_blank" href="#">innovation-lead-feedback.pdf, 6 KB (opens in a new window)</a>
         </div>
 
         <div class="form-group download">
