--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/fragments/modals.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/fragments/modals.html
@@ -578,20 +578,20 @@
 </th:block>
 
 <!-- Confirmation of withdrawing a project -->
-<th:block th:fragment="modal-withdraw-project (projectId, competitionId)">
+<th:block th:fragment="modal-withdraw-project">
     <div class="modal-withdraw-project" role="dialog" aria-hidden="true">
         <th:block th:insert="fragments/modals :: close-button" />
         <h2 class="heading-medium no-margin">Withdraw project from competition</h2>
-        <p>Are you sure you want to withdraw the project <span th:text="${projectId}"></span> from the competition<span th:text="${competitionId}"></span>?</p>
+        <p>Are you sure you want to withdraw the project from the competition?</p>
         <p>The project will be marked as withdrawn and removed from project setup. You can still view the application in
             previous competitions</p>
         <hr />
-        <div>
-            <button class="button" name="approved" value="true">Withdraw project</button>
-            <button type="button" class="js-close buttonlink">Cancel</button>
-        </div>
+            <form th:action="@{~/management/competition/${competitionId}/applications/unsuccessful'}" method="post">
+                <div>
+                    <button class="button" name="approved" value="true">Withdraw project</button>
+                    <button type="button" class="js-close buttonlink">Cancel</button>
+                </div>
+            </form>
     </div>
 </th:block>
-
-
 </html>
