--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/admin/edit-user.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/admin/edit-user.html
@@ -74,7 +74,7 @@
                 </th:block>
             </label>
             <select name="role" class="form-control" id="role" th:field="*{role}" required="required" data-required-errormessage="Please select a role">
-                <option th:each="adminRole : ${T(org.innovateuk.ifs.user.resource.UserRoleType).internalRoles()}" th:value="${adminRole}" th:text="${adminRole.displayName}"></option>
+                <option th:each="adminRole : ${T(org.innovateuk.ifs.user.resource.UserRoleType).internalUserRoleTypes()}" th:value="${adminRole}" th:text="${adminRole.displayName}"></option>
             </select>
         </div>
 
