--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-interview-accept-user-exists-but-not-logged-in.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-interview-accept-user-exists-but-not-logged-in.html
@@ -9,8 +9,6 @@
         <th:block th:insert="fragments/layout :: global-header" />
 
         <main tabindex="-1" id="content">
-            <th:block th:insert="fragments/layout :: main-content-start" />
-
             <th:block th:insert="fragments/layout :: page-title" th:with="pageTitle='Assessment interview panel',size='heading-xlarge'" />
             <p th:text="|You have been invited to the assessment interview panel for: '${model.competitionName}'.|"></p>
 
@@ -30,5 +28,6 @@
 
         <th:block th:insert="fragments/layout :: footer" />
         <th:block th:insert="fragments/layout :: body-end" />
+        <th:block th:insert="fragments/service-layout :: body-end" />
     </body>
 </html>
