IFS-3201 accepted tab for assessors accepting interview.

--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview-find.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview-find.html
@@ -63,13 +63,13 @@
         <li class="not-selected">
             <a th:href="@{/assessment/interview/competition/{competitionId}/assessors/pending-and-declined(competitionId=${model.competitionId})}">Pending and declined</a>
         </li>
-        <li class="not-selected" aria-label="Item not selected">
-            <a class="buttonlink disabled">Accepted</a>
+        <li class="not-selected">
+            <a th:href="@{/assessment/interview/competition/{competitionId}/assessors/accepted(competitionId=${model.competitionId})}">Accepted</a>
         </li>
     </ul>
 
     <div class="grid-row">
-        <div class="column-three-quarters">
+        <div class="column-three-quarters">w
             <h2 class="heading-small no-margin-top">Find registered assessors to invite.</h2>
             <br>
         </div>
