--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/competition-setup-section-application.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/competition-setup-section-application.html
@@ -51,9 +51,9 @@
                         </h4>
                     </div>
                     <div class="task-status">
-                        <th:form>
+                        <form>
                             <button type="submit" th:value="${question.id}" name="deleteProjectDetailsQuestion" class="buttonlink no-margin">Remove</button>
-                        </th:form>
+                        </form>
                     </div>
                 </th:block>
             </li>
@@ -83,9 +83,9 @@
                         </h4>
                     </div>
                     <div th:if="${model.multipleAssessedQuestionsLeft()}" class="task-status">
-                        <th:form>
+                        <form>
                             <button type="submit" th:value="${question.id}" name="deleteAssessedQuestion" class="buttonlink no-margin">Remove</button>
-                        </th:form>
+                        </form>
                     </div>
                 </th:block>
             </li>
