IFS-2782 fixing issues with invite applicant.

--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview/application-send-invites.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview/application-send-invites.html
@@ -38,7 +38,7 @@
             <tbody>
             <tr th:each="app : ${model.applications}">
                 <td>
-                    <a th:href="@{/competition/{competitionId}/application/{appId}(competitionId=${model.competitionId},appId=${app.applicationId})} + ${originQuery}"
+                    <a th:href="@{/competition/{competitionId}/application/{appId}(competitionId=${model.competitionId},appId=${app.applicationId})} + ${model.originQuery}"
                        th:text="${app.applicationId}">123
                     </a>
                 </td>
