IFS-2711 Move password toggle code to module. Add random name generator. Move focus after click.

--- a/ifs-auth-service/ifs-idp-service/src/main/docker/pages/views/login.vm
+++ b/ifs-auth-service/ifs-idp-service/src/main/docker/pages/views/login.vm
@@ -257,35 +257,23 @@
         }
     </script>
     <script src="$resourcesDomain/js/ifs_modules/formValidation.js" type="text/javascript"></script>
+    <script src="$resourcesDomain/js/ifs_modules/passwordToggle.js" type="text/javascript"></script>
     <script type="text/javascript">
         IFS.core.formValidation.init();
+        IFS.core.passwordToggle.init();
     </script>
     <script>
         jQuery(document).ready(function(){
-            jQuery("form").submit(function(event) {
+            /* jQuery("form").submit(function(event) {
                 var emailField = jQuery("[type='email']").first();
                 var passwordField = jQuery("[type='password']").first();
                 var button = jQuery("button[type='submit']").first();
                 var valid = IFS.core.formValidation.checkEmail(emailField) && IFS.core.formValidation.checkRequired(passwordField);
                 if (valid) {
+                    console.log('Valid')
                     button.get(0).childNodes[0].nodeValue='#springMessageText("idp.login.pleasewait", "Signing in, please wait...")';
                 }
-            });
-            jQuery(".password-toggle button").on("click", function(event){
-                event.preventDefault();
-                var button = jQuery(this);
-                var passwordInput = jQuery(this).prev();
-                var inputType = passwordInput.attr('type');
-                if (inputType === 'password') {
-                    passwordInput.prop("type", "text");
-                    button.text("Hide");
-                    button.attr("aria-checked", true);
-                } else {
-                    passwordInput.prop("type", "password");
-                    button.text("Show");
-                    button.attr("aria-checked", false);
-                }
-            });
+            }); */
             jQuery.ajax({
                 url: '$resourcesDomain/alert/findAllVisibleByType/MAINTENANCE',
                 method: 'GET'
