--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview/application-send-invites.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview/application-send-invites.html
@@ -56,9 +56,19 @@
 
 
     <form th:action="@{/assessment/interview/competition/{competitionId}/applications/invite/send(competitionId=${model.competitionId})}" method="post" enctype="multipart/form-data" th:object="${form}">
-        <div class="form-group extra-margin-bottom">
-            <label class="form-label-bold" for="subject">Email subject</label>
-            <input class="form-control width-full" id="subject" type="text" th:field="*{subject}" />
+        <div class="form-group extra-margin-bottom" th:classappend="${#fields.hasErrors('*{subject}')} ? 'form-group-error'">
+            <label class="form-label-bold" th:for="${#ids.next('subject')}">
+                <span>Email subject</span>
+                <th:block th:if="${#fields.hasErrors('subject')}">
+                    <span class="error-message" th:each="err : ${#fields.errors('subject')}" th:text="${err}"></span>
+                </th:block>
+            </label>
+            <input class="form-control width-full"
+                   id="subject"
+                   type="text"
+                   th:field="*{subject}"
+                   required="required"
+                   th:attr="data-required-errormessage=#{validation.inviteAssessors.subject.required}"  />
         </div>
 
         <h3 class="heading-small">Message</h3>
