IFS-2782 Fixing validation issue.

--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview/application-send-invites.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview/application-send-invites.html
@@ -32,7 +32,7 @@
                 <th scope="col" class="width-small">Application number</th>
                 <th scope="col">Project title</th>
                 <th scope="col">Lead organisation</th>
-                <td scope="col">Additional feedback</td>
+                <th scope="col">Additional feedback</th>
             </tr>
             </thead>
             <tbody>
@@ -105,5 +105,6 @@
 
 <th:block th:insert="fragments/layout :: footer" />
 <th:block th:insert="fragments/layout :: body-end" />
+<th:block th:insert="fragments/service-layout :: body-end" />
 </body>
 </html>
